# NewStaffLearningTask

./: .gitignore  CMakeLists.txt  README.md  arm64asm.h  arm64asm.s  googleTest.cc  wasm.test.js  wasm.wat
.github/workflows/: arm64asm.yml  as.yml  c-cpp.yml  wasm.yml
arm64/: CMakeLists.txt  arm64asm.h  arm64asm.s  googleTest.cc
as/: package-lock.json  package.json
as/assembly/: index.ts
as/tests/: index.js
wasm/: package-lock.json  package.json  wasm.test.js  wasm.wat
